Traverse code including safely backup progress in graph.txt and visited.txt in case you have to traverse in different batches

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 graph.txt
 visited.txt
+last_room.txt
+last_direction.txt
+test.py
+backup/
 test.py
 # Byte-compiled / optimized / DLL files
 __pycache__/
